# terrestrial-collection-machine

./: .bazelrc  .gitignore  BUILD.bazel  HACKING.md  README.md  WORKSPACE  copts.bzl
dev/: BUILD.bazel  callback.cpp  callback.hpp  image.cpp  image.hpp  loader.cpp  loader.hpp  log.cpp  log.hpp  main_dev.cpp  path.cpp  path.hpp  screenshot.cpp  screenshot.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp
dev/shader/: text.frag  text.vert
tcm/: BUILD.bazel  callback.cpp  demo.c  demo.h  dragon.c  dragon.h  gl.h  loader.cpp  loader.hpp  log.cpp  main.c  main_dev.cpp  main_release.c  pack_shaders.py  shader.cpp  shader.hpp  shaders.c  shaders.h  triangle.c  triangle.h
tcm/shader/: line.frag  line.geom  line.vert  triangle.frag  triangle.vert
tools/: BUILD.bazel  copts.bzl  markdown.bzl  pkg_config.bzl  repositories.bzl
tools/macos/: BUILD.bazel
