load("//tools:copts.bzl", "CXXOPTS")

cc_binary(
    name = "dev",
    srcs = [
        "callback.cpp",
        "callback.hpp",
        "image.cpp",
        "image.hpp",
        "loader.cpp",
        "loader.hpp",
        "log.cpp",
        "log.hpp",
        "main_dev.cpp",
        "path.cpp",
        "path.hpp",
        "screenshot.cpp",
        "screenshot.hpp",
        "shader.cpp",
        "shader.hpp",
        "text.cpp",
        "text.hpp",
    ],
    copts = CXXOPTS,
    deps = [
        "//tcm:tcm_common",
    ] + select({
        "@bazel_tools//src/conditions:darwin": [
            "//tools/macos:application_services",
        ],
        "//conditions:default": [],
    }),
)
